force-app/main/default/objects/Client_Invoicing_Memo__c/Client_Invoicing_Memo__c.object-meta.xml
<CustomObject>
    <label>Client Invoicing Memo</label>
    <nameField>
        <displayFormat>CIM-{000000}</displayFormat>
        <label>Client Invoicing Memo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Invoicing Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>