force-app/main/default/objects/Client_Invoicing_Memo__c/fields/Contract_Fee_Detail__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fee_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to calculate Utilization Adjustments</inlineHelpText>
    <label>Contract Fee Detail</label>
    <referenceTo>Contract_Fee_Detail__c</referenceTo>
    <relationshipLabel>Client Invoicing Memos</relationshipLabel>
    <relationshipName>Client_Invoicing_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>