force-app/main/default/objects/Client_Invoicing_Memo__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Stamped inputs, set by automation when calculating the amount</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>