force-app/main/default/objects/Client_Invoicing_Memo__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated when the Generate Invoice flow creates a new invoice and pulls this record in. Used to tell if this record has been included in an invoice</inlineHelpText>
    <label>Invoice Line Item</label>
    <referenceTo>Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Client Invoicing Memos</relationshipLabel>
    <relationshipName>Client_Invoicing_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>