force-app/main/default/objects/Client_Invoicing_Memo__c/fields/Production_Detail__c.field-meta.xml
<CustomField>
    <fullName>Production_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to calculate Utilization Adjustments</inlineHelpText>
    <label>Production Detail</label>
    <referenceTo>Transfer_Part__c</referenceTo>
    <relationshipLabel>Client Invoicing Memos</relationshipLabel>
    <relationshipName>Client_Invoicing_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>