force-app/main/default/objects/Client_Invoicing_Memo__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used for Utilization Adjustments to Management Fees, populated by the Utilization Adjustment flow</inlineHelpText>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Client Invoicing Memos</relationshipLabel>
    <relationshipName>Client_Invoicing_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>