force-app/main/default/objects/Client_Invoicing_Memo__c/fields/Subscription_Order__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Order</label>
    <referenceTo>Subscription_Order__c</referenceTo>
    <relationshipLabel>Client Invoicing Memos</relationshipLabel>
    <relationshipName>Client_Invoicing_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>