force-app/main/default/objects/Client_Invoicing_Memo__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waived Acquisition / Reacquisition Fee</fullName>
                <default>true</default>
                <label>Waived Acquisition / Reacquisition Fee</label>
            </value>
            <value>
                <fullName>Adjustment for Resize Fee</fullName>
            </value>
            <value>
                <fullName>Utilization Adjustment to Management Fee</fullName>
            </value>
            <value>
                <fullName>Manual Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>